Add sync assets

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.2"/>
+            android:layout_weight="0.1"/>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -31,6 +31,12 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/imgSync"
+                    android:layout_width="match_parent"
+                    android:layout_weight="0.3"
+                    android:layout_height="0dp"
+                    android:src="@drawable/sync"/>
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
@@ -41,12 +47,12 @@
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/imgDummy"
                         android:layout_width="0dp"
-                        android:layout_weight="2"
+                        android:layout_weight="2.2"
                         android:layout_marginLeft="10dp"
                         android:layout_height="match_parent" />
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/imgUser"
-                        android:layout_weight="1"
+                        android:layout_weight="1.5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:src="@drawable/usericon"/>
@@ -120,13 +126,13 @@
                     android:layout_width="match_parent"
                     android:text="Remember Me"
                     android:layout_height="0dp"
-                    android:layout_weight="0.1"
+                    android:layout_weight="0.2"
                     android:textSize="20sp"/>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="0.2"
+                    android:layout_weight="0.3"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">
                     <androidx.appcompat.widget.AppCompatButton
