--- a/app/src/main/res/layout/custom_popup_layout.xml
+++ b/app/src/main/res/layout/custom_popup_layout.xml
@@ -96,6 +96,7 @@
             android:layout_height="match_parent"
             android:background="#722F37"/>
         <LinearLayout
+            android:id="@+id/llActualDest"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
