--- a/app/src/main/res/layout/activity_workorder_display.xml
+++ b/app/src/main/res/layout/activity_workorder_display.xml
@@ -96,22 +96,34 @@
                     android:layout_marginRight="8dp"
                     android:layout_gravity="center"
                     android:gravity="center"/>
-                <androidx.appcompat.widget.AppCompatButton
+<!--                <androidx.appcompat.widget.AppCompatButton-->
+<!--                    android:id="@+id/btnOnOff"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="60dp"-->
+<!--                    android:layout_weight="0.5"-->
+<!--                    android:layout_margin="10dp"-->
+<!--                    android:layout_marginStart="5dp"-->
+<!--                    android:text="OFF"-->
+<!--                    android:textAlignment="center"-->
+<!--                    android:background="@drawable/custom_off_button"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textSize="18sp"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:gravity="center"-->
+<!--                    android:elevation="10dp"/>-->
+
+                <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/btnOnOff"
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="0.5"
-                    android:layout_margin="10dp"
-                    android:layout_marginStart="5dp"
-                    android:text="ON"
-                    android:textAlignment="center"
-                    android:background="@drawable/custom_on_button"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
                     android:textSize="18sp"
-                    android:layout_gravity="center"
+                    android:layout_marginStart="5dp"
+                    android:padding="10dp"
                     android:gravity="center"
-                    android:elevation="10dp"/>
+                    android:elevation="10dp"
+                    android:layout_gravity="center"/>
+
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
