--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,8 @@
                         android:layout_weight="0.5"
                         android:layout_marginRight="10dp"
                         android:layout_height="match_parent"
-                        android:src="@drawable/setting"/>
+                        android:src="@drawable/setting"
+                        android:tint="@color/theme_text"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -88,10 +89,10 @@
                         android:maxLength="50"
                         android:letterSpacing="0.1"
                         android:textSize="20sp"
-                        android:textColor="@color/orange1"
+                        android:textColor="@color/theme_text"
                         android:hint="Username"
                         android:paddingLeft="5dp"
-                        android:drawableTint="@color/orange1"/>
+                        android:drawableTint="@color/theme_text"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
@@ -100,7 +101,7 @@
                     android:layout_weight="0.5"
                     android:layout_marginTop="5dp"
                     app:passwordToggleEnabled="true"
-                    app:passwordToggleTint="@color/orange1"
+                    app:passwordToggleTint="@color/theme_text"
                     android:background="@drawable/edittext_white_background"
                     android:drawableRight="@android:drawable/ic_menu_info_details">
 
@@ -114,7 +115,7 @@
                         android:letterSpacing="0.2"
                         android:maxLength="50"
                         android:paddingLeft="5dp"
-                        android:textColor="@color/orange1"
+                        android:textColor="@color/theme_text"
                         android:textSize="20sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -127,7 +128,9 @@
                     android:text="Remember Me"
                     android:layout_height="0dp"
                     android:layout_weight="0.2"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp"
+                    android:textColor="@color/theme_text"
+                    android:textStyle="bold"/>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
