--- a/app/src/main/res/layout/activity_url_config.xml
+++ b/app/src/main/res/layout/activity_url_config.xml
@@ -37,7 +37,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
                 android:textSize="25sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/theme_text"/>
             <EditText
                 android:id="@+id/edtUrl"
                 android:layout_width="match_parent"
@@ -52,7 +53,7 @@
                 android:layout_marginTop="10dp"
                 android:hint="Enter URL:- http://11.11.11.11"
                 android:textSize="25sp"
-                android:textColor="@color/blue1"/>
+                android:textColor="@color/theme_text"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_marginTop="50dp"
